# PrismerCloud

./: .env.example  .gitguardian.yaml  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  install.sh  next.config.ts  package-lock.json  package.json  server.ts  tsconfig.json
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  cookbook-tests.yml  docker.yml  sdk-test.yml
.sync-server-state/: next-patch
.test/: README.md  helpers.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.test/cookbook/: agent-messaging.test.ts  evolution-loop.test.ts  file-upload.test.ts  identity-aip.test.ts  quickstart.test.ts  realtime.test.ts  skill-marketplace.test.ts  workspace.test.ts
docker/: init-db.sql
docs/: AGENT-ORCHESTRATION.md  API.md  ARCHITECTURE.md  BACKEND-REQUIREMENTS.md  CONTEXT-NETWORK.md  E2E-ENCRYPTION-HARDENING.md  HYPERGRAPH-THEORY.md  MEMORY-LAYER.md  PARK-DESIGN-V2.md  PRD.md  ROADMAP.md  ReleasePlan-1.7.2.md  SDK-MVP-WALKTHROUGH.md  SDK-REDESIGN-FINAL.md  SELF-HOST.md  SKILL-EVOLUTION.md  TECH-CONSOLIDATION.md  TODO.md  Wechat.md  demo-script.sh  demo.cast  openapi.yaml  regression-1.7.2.md  release-workflow.md
docs/benchmark/: COLD-START-STRATEGY.md  COMPETITIVE-BENCHMARK.md  EVOLUTION-H2H-EXPERIMENT.md  PERFORMANCE-METRICS.md  SCALE-ANALYSIS.md  SDK-DESIGN-REVIEW.md  SDK-REGRESSION.md  VERIFICATION-PLAN.md  results-coldstart.json  results-competitive.json  results-convergence.json  results-latency.json
docs/de/: HYPERGRAPH-THEORY.md  README.md
docs/es/: HYPERGRAPH-THEORY.md  README.md
docs/evolution/: EVOLUTION-COMPETITOR-RESEARCH.md  EVOLUTION-ENGINE.md  EVOLUTION-MAP-30-QUESTIONS.md  EVOLUTION-MAP-DESIGN.md  EVOLUTION-REDESIGN.md  EVOLUTION-REDESIGN_CN.md  EVOLUTION-SDK-CRITIQUE.md  EVOLUTION_ENGINE_SUPERGRAPH.md  EVOMAP-ANALYSIS.md  MY-EVOLUTION-REDESIGN.md  SKILL-GENE-ECOSYSTEM.md  THEORETICAL-REVIEW.md
docs/fr/: HYPERGRAPH-THEORY.md  README.md
docs/im/: SECURITY-IMPROVEMENT-PLAN.md
docs/ja/: HYPERGRAPH-THEORY.md  README.md
docs/zh/: HYPERGRAPH-THEORY.md  README.md
prisma/: schema.mysql.prisma  schema.prisma
public/docs/: Skill.md
scripts/: docker-entrypoint.sh  docker-init-db.sh  e2e-self-host.ts
scripts/sql/: 010_create_pc_tables.sql  020_create_billing_tables.sql  030_create_pc_api_keys.sql  040_create_pc_users.sql
sdk/: .gitignore  README.md  Skill.md
sdk/aip/: README.md
sdk/aip/python/: pyproject.toml
sdk/aip/python/aip/: __init__.py  credentials.py  delegation.py  did.py  identity.py
sdk/aip/python/aip_sdk/: __init__.py
sdk/claude-code-plugin/: .mcp.json  CHANGELOG.md  DESIGN-V2.md  DESIGN.md  README.md  package.json
sdk/golang/: README.md  encryption.go  evolution_runtime.go  file_upload_test.go  go.mod  integration_test.go  prismer.go  signal_rules.go  types.go  webhook.go  webhook_test.go
sdk/mcp/: CHANGELOG.md  README.md  package.json  server.json  test-mcp-tools.ts
sdk/openclaw-channel/: CHANGELOG.md  README.md  index.ts  package.json  setup-entry.ts
sdk/opencode-plugin/: CHANGELOG.md  DESIGN.md  README.md  package.json
sdk/prismer-cloud/: CHANGELOG.md  README.md  icon  smallicon
sdk/prismer-cloud/adapters/hermes/: CHANGELOG.md  README.md  pyproject.toml
sdk/prismer-cloud/adapters/hermes/src/prismer_adapter_hermes/: __init__.py  adapter.py  descriptor.py  event_builder.py  register.py  sink.py  wire.py
sdk/prismer-cloud/adapters/hermes/src/prismer_adapter_hermes/dispatch/: __init__.py  __main__.py  agent_runner.py  server.py
sdk/prismer-cloud/adapters/hermes/tests/: test_adapter.py  test_agent_runner.py  test_descriptor.py  test_dispatch_server.py  test_event_builder.py  test_real_dispatch_e2e.py  test_real_hermes.py  test_register.py  test_sink.py
sdk/prismer-cloud/rust/: CHANGELOG.md  Cargo.toml  README.md
sdk/prismer-cloud/rust/src/: aip.rs  cli.rs  community.rs  daemon.rs  encryption.rs  evolution.rs  evolution_cache.rs  files.rs  im.rs  knowledge.rs  lib.rs  memory.rs  offline.rs  parse.rs  realtime.rs  signal_rules.rs  tasks.rs  types.rs  ui.rs  webhook.rs
sdk/prismer-cloud/rust/tests/: doc_samples.rs  parity.rs
sdk/python/: README.md  pyproject.toml
sdk/python/prismer/: __init__.py  __main__.py  cli.py  client.py  encryption.py  evolution_cache.py  evolution_outbox.py  evolution_runtime.py  realtime.py  signal_rules.py  types.py  webhook.py
sdk/python/tests/: test_integration.py
sdk/rust/: Cargo.toml  LICENSE  README.md
sdk/rust/src/: cli.rs  context.rs  encryption.rs  evolution.rs  evolution_cache.rs  evolution_runtime.rs  identity.rs  im.rs  lib.rs  signal_rules.rs  tasks.rs  types.rs  webhook.rs
sdk/scripts/: build-all.sh
sdk/skill/: Skill.md
sdk/tests/: sdk-integration.ts  security-test.ts  test_go_cli.sh  test_python_sdk.py
sdk/typescript/: CHANGELOG.md  README.md  package.json
server/: .dockerignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  server.prod.js  tsconfig.json
server/docs/: API.md  SDK.md  SELF-HOST.md
server/prisma/: schema.mysql.prisma  schema.prisma
server/scripts/: analyze-real-data.ts  audit-entropy.sh  backfill-did-keys.ts  bench-context.ts  bench-discovery.ts  bench-evolution-hypergraph.ts  bench-evolution.ts  bench-infra.ts  bench-memory.ts  bench-moonshot-api.ts  bench-signing.ts  benchmark-api-latency.ts  benchmark-evolution-competitive.ts  benchmark-evolution-convergence.ts  benchmark-evolution-h2h.ts  benchmark-evolution-latency.ts  benchmark-evomap.ts  benchmark-im.ts  check-018.ts  check-doc-links.ts  check-test-db.ts  check-version-consistency.ts  docker-entrypoint.sh  e2e-self-host.ts  h2h-analyze.ts  import-gstack-skills.ts  import-gstack-to-skills.ts  migrate-skills-to-prod.ts  mock-workspace-data.ts  probe-context-cache.ts  probe-context-data.ts  regression-v182-reactions.ts  reset-evolution-data.ts  run-migration-018.ts  (+42 more)
src/: instrumentation.ts
(+1245 files in other folders)
