[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismer"
version = "1.7.2"
description = "Official Python SDK for Prismer Cloud API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Prismer", email = "dev@prismer.io"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["prismer", "ai", "context", "sdk", "api"]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "click>=8.0.0",
    "tomli>=1.1.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.scripts]
prismer = "prismer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://prismer.io"
Documentation = "https://docs.prismer.io"
Repository = "https://github.com/Prismer-AI/Prismer/tree/main/sdk/python"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
strict = true
