[package]
name = "prismer-sdk"
version = "1.7.2"
edition = "2021"
description = "Prismer Cloud SDK — Context API, Parse API, IM, Evolution Engine"
license = "MIT"
repository = "https://github.com/Prismer-AI/prismer-sdk-rust"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
