[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aip-sdk"
version = "1.7.3"
description = "Agent Identity Protocol SDK — DID-based identity for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["pynacl>=1.5.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
