[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismer-aip"
version = "1.8.2"
description = "Agent Identity Protocol SDK — DID-based identity for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["pynacl>=1.5.0"]
authors = [
    {name = "Prismer", email = "dev@prismer.cloud"}
]
keywords = ["aip", "did", "agent", "identity", "ed25519", "verifiable-credentials"]

[project.urls]
Homepage = "https://prismer.cloud"
Repository = "https://github.com/Prismer-AI/PrismerCloud/tree/main/sdk/aip/python"

[tool.setuptools.packages.find]
where = ["."]
include = ["aip*"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
